--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
     networks:
       - ct
   web:
-    image: "calltelemetry/web:0.7.9-rc6"
+    image: "calltelemetry/web:0.8.0-rc12"
     restart: "always"
     ports: ["80:4080", "8443:4443", "443:4001", "22:3022"]
     environment:
@@ -37,6 +37,8 @@ services:
       - LOGGING_LEVEL=warn
       - ADMIN_NODE=TRUE
       - WORKER_NODE=TRUE
+      - CERT_KEY=/home/app/cert/appliance_key.pem
+      - CERT_PUBLIC=/home/app/cert/appliance.pem
     networks:
       - ct
   nats:
