update 0.8.1-rc62 fixes to keepalive

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,11 @@
 version: "3"
 services:
   traceroute:
-    image: "calltelemetry/traceroute:0.7.2"
+    image: "calltelemetry/traceroute:0.7.3"
     # ICMP needs root access
     user: root
     expose: [4100]
+    # ports: ["4100:4100"]
     networks:
       - ct
   db:
@@ -21,7 +22,7 @@ services:
     networks:
       - ct
   web:
-    image: "calltelemetry/web:0.8.1-rc57"
+    image: "calltelemetry/web:0.8.1-rc62"
     restart: "always"
     ports: ["80:4080", "8443:4443", "443:4001", "22:3022"]
     environment:
@@ -33,18 +34,28 @@ services:
       - DB_PORT=5432
       # Enter an IP or FQDN here, but should auto detect IP.
       - EXTERNAL_IP=$DEFAULT_IPV4
-      # Logging levels - debug, info, warn, error
-      - LOGGING_LEVEL=info
+      # - CDR_ROOT_PATH=/sftp
+      # Logging levels - debug, info, warning, error
+      - LOGGING_LEVEL=warning
       - ADMIN_NODE=TRUE
       - WORKER_NODE=TRUE
       - CERT_KEY=/home/app/cert/appliance_key.pem
       - CERT_PUBLIC=/home/app/cert/appliance.pem
+
+    # volumes:
+    # - ./sftp:/sftp
+    # - ./ctconfig:/home/app/ctconfig
     networks:
       - ct
   nats:
     image: "nats:latest"
     expose:
       - "4222"
+    # ports:
+    #   - "8222:8222"
+    # command: "-c /etc/nats/nats.conf "
+    # volumes:
+    #  - ./nats.conf/:/etc/nats
     networks:
       - ct
 networks:
