--- a/ova/versions/0.8.2-rc12.yaml
+++ b/ova/versions/0.8.2-rc12.yaml
@@ -32,7 +32,7 @@ services:
       - "80"
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.vue-web.rule=Host(`demo.calltelemetry.internal`) && PathPrefix(`/`) && !PathPrefix(`/api`)"
+      - "traefik.http.routers.vue-web.rule=PathPrefix(`/`) && !PathPrefix(`/api`)"
       - "traefik.http.routers.vue-web.entrypoints=websecure"
       - "traefik.http.services.vue-web.loadbalancer.server.port=80"
       - "traefik.http.routers.vue-web.tls=true"
@@ -92,7 +92,7 @@ services:
       - ct
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.web.rule=Host(`demo.calltelemetry.internal`) && PathPrefix(`/api`)"
+      - "traefik.http.routers.web.rule=PathPrefix(`/api`)"
       - "traefik.http.routers.web.entrypoints=websecure"
       - "traefik.http.services.web.loadbalancer.server.port=4000"
       - "traefik.http.routers.web.tls=true"
