--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,32 @@
-version: "3"
+version: "3.8"
+
 services:
-  traceroute:
-    image: "calltelemetry/traceroute:0.7.3"
-    # ICMP needs root access
-    user: root
-    expose: [4100]
-    # ports: ["4100:4100"]
+  caddy:
+    image: caddy:2-alpine
+    ports:
+      - "443:443"
+    volumes:
+      - ./Caddyfile:/etc/caddy/Caddyfile
+      - ./certs:/certs:ro
     networks:
       - ct
+
+  vue-web:
+    image: "calltelemetry/vue:0.8.2-rc57"
+    restart: "always"
+    expose:
+      - "80"
+    networks:
+      - ct
+
+  traceroute:
+    image: "calltelemetry/traceroute:0.7.3"
+    user: root
+    expose:
+      - "4100"
+    networks:
+      - ct
+
   db:
     image: "bitnami/postgresql:14"
     user: root
@@ -16,47 +35,59 @@ services:
       - POSTGRES_USER=calltelemetry
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_DB=calltelemetry_prod
-    expose: [5432]
+    expose:
+      - "5432"
     volumes:
       - ./postgres-data:/bitnami/postgresql
     networks:
       - ct
+
   web:
-    image: "calltelemetry/web:0.8.1-rc71"
+    image: "calltelemetry/web:0.8.2-rc57"
     restart: "always"
-    ports: ["80:4080", "8443:4443", "443:4001", "22:3022"]
+    user: root
+    expose:
+      - 4000
+      - 4080
+    ports:
+      - "80:4080"
+      - "22:3022"
     environment:
-      # Change these if you want to run your own DB server.
       - DB_USER=calltelemetry
       - DB_PASSWORD=postgres
       - DB_HOSTNAME=db
       - DB_NAME=calltelemetry_prod
       - DB_PORT=5432
-      # Enter an IP or FQDN here, but should auto detect IP.
       - EXTERNAL_IP=$DEFAULT_IPV4
-      # - CDR_ROOT_PATH=/sftp
-      # Logging levels - debug, info, warning, error
       - LOGGING_LEVEL=warning
       - ADMIN_NODE=TRUE
       - WORKER_NODE=TRUE
       - CERT_KEY=/home/app/cert/appliance_key.pem
-      - CERT_PUBLIC=/home/app/cert/appliance.pem
-
-    # volumes:
-    # - ./sftp:/sftp
-    # - ./ctconfig:/home/app/ctconfig
+      - CERT_PUBLIC=/home/app/cert/appliance.crt
+      # can be HACKNEY, IBROWSE, MINT, GUN or HTTPC.
+       # GUN is the new standard. Hackney was default 0.8.1 and before.
+      - HTTP_ADAPTER=GUN
     networks:
       - ct
+    volumes:
+      - ./certs:/home/app/cert:rw
+
   nats:
     image: "nats:latest"
+    command: "-c /etc/nats/nats.conf"
+    volumes:
+      - ./nats.conf:/etc/nats/nats.conf
     expose:
       - "4222"
-    # ports:
-    #   - "8222:8222"
-    # command: "-c /etc/nats/nats.conf "
-    # volumes:
-    #  - ./nats.conf/:/etc/nats
     networks:
       - ct
+
 networks:
   ct:
+    # enable_ipv6: true
+
+volumes:
+  certs:
+    driver: local
+  traefik-logs:
+    driver: local
