--- a/ova/nats.conf
+++ b/ova/nats.conf
@@ -1,2 +1,8 @@
 # Maximum payload
 max_payload: 8MB
+
+jetstream {
+  store_dir: "/jetstream/store"
+  max_memory_store: 1GB
+  max_file_store: 10GB
+}
