--- a/ova/versions/0.8.4-rc39.yaml
+++ b/ova/versions/0.8.4-rc39.yaml
@@ -43,7 +43,7 @@ services:
       - ct
 
   web:
-    image: "calltelemetry/web:0.8.4-rc39"
+    image: "calltelemetry/web:0.8.4-rc39-retry2"
     restart: "always"
     user: root
     expose:
