--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,22 +10,44 @@ services:
       - ./certs:/certs:ro
     networks:
       - ct
+    healthcheck:
+      test:
+        [
+          "CMD-SHELL",
+          "wget -q --spider http://127.0.0.1:80 || wget -q --spider http://127.0.0.1:2019/metrics",
+        ]
+      interval: 30s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
 
   vue-web:
-    image: "calltelemetry/vue:0.8.4-rc133"
+    image: "calltelemetry/vue:0.8.4-rc144"
     restart: "always"
     expose:
       - "80"
     networks:
       - ct
+    healthcheck:
+      test: ["CMD-SHELL", "wget -q --spider http://127.0.0.1:80"]
+      interval: 30s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
 
   traceroute:
-    image: "calltelemetry/traceroute:0.7.3"
+    image: "calltelemetry/traceroute:0.8.5-rc27"
     user: root
     expose:
       - "4100"
     networks:
       - ct
+    healthcheck:
+      test: ["CMD-SHELL", "bash -c 'exec 3<>/dev/tcp/127.0.0.1/4100'"]
+      interval: 30s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
 
   db:
     image: "bitnamilegacy/postgresql:14"
@@ -44,7 +66,7 @@ services:
       - ct
 
   web:
-    image: "calltelemetry/web:0.8.4-rc133"
+    image: "calltelemetry/web:0.8.4-rc144"
     restart: "always"
     user: root
     expose:
@@ -68,18 +90,27 @@ services:
       # can be HACKNEY, IBROWSE, MINT, GUN or HTTPC.
       - HTTP_ADAPTER=HACKNEY
       - LOG_PATH=/var/log
+      - ERL_CRASH_DUMP=/tmp/crash-dumps/erl_crash.dump
+      - ERL_CRASH_DUMP_NICE=1
     tmpfs:
       - /var/log:rw,mode=0555,size=5000m
     networks:
       - ct
     volumes:
       - ./certs:/home/app/cert:rw
+      - ./crash-dumps:/tmp/crash-dumps:rw
     logging:
       driver: "json-file"
       options:
         max-size: "100m"
         max-file: "7" # Keeps 7 days of logs
         compress: "true" # Compresses rotated files
+    healthcheck:
+      test: ["CMD-SHELL", "wget -q --spider http://127.0.0.1:4080/healthz"]
+      interval: 30s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
 
   nats:
     image: "nats:2.11"
@@ -91,6 +122,45 @@ services:
     networks:
       - ct
 
+  prometheus:
+    image: prom/prometheus:v2.52.0
+    restart: "always"
+    user: root
+    ports:
+      - "9090:9090"
+    command:
+      - --config.file=/etc/prometheus/prometheus.yml
+      # Retain a modest retention window to cap disk usage.
+      - --storage.tsdb.path=/prometheus
+      - --storage.tsdb.retention.time=15d
+      - --web.console.libraries=/usr/share/prometheus/console_libraries
+      - --web.console.templates=/usr/share/prometheus/consoles
+    volumes:
+      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
+      - prometheus-data:/prometheus
+    networks:
+      - ct
+
+  grafana:
+    image: grafana/grafana:11.0.0
+    restart: "always"
+    user: "472"
+    depends_on:
+      - prometheus
+    ports:
+      - "3000:3000"
+    environment:
+      - GF_SECURITY_ADMIN_USER=${GF_ADMIN_USER:-admin}
+      - GF_SECURITY_ADMIN_PASSWORD=${GF_ADMIN_PASSWORD:-calltelemetry}
+      - GF_PATHS_PROVISIONING=/etc/grafana/provisioning
+      - GF_DASHBOARDS_DEFAULT_HOME_DASHBOARD_PATH=/var/lib/grafana/dashboards/calltelemetry-overview.json
+    volumes:
+      - ./grafana/provisioning:/etc/grafana/provisioning:ro
+      - ./grafana/dashboards:/var/lib/grafana/dashboards:ro
+      - grafana-data:/var/lib/grafana
+    networks:
+      - ct
+
 networks:
   ct:
     # enable_ipv6: true
@@ -98,5 +168,11 @@ networks:
 volumes:
   certs:
     driver: local
+  crash-dumps:
+    driver: local
   traefik-logs:
+    driver: local
+  prometheus-data:
+    driver: local
+  grafana-data:
     driver: local
