--- a/ova/versions/0.8.4-rc146-postgres.yaml
+++ b/ova/versions/0.8.4-rc146-postgres.yaml
@@ -28,7 +28,7 @@ services:
       - ct
 
   db:
-    image: "calltelemetry/postgresql:14"
+    image: "calltelemetry/postgres:14"
     restart: "always"
     environment:
       - POSTGRES_USER=calltelemetry
