--- a/ova/versions/0.8.4-rc146-postgres.yaml
+++ b/ova/versions/0.8.4-rc146-postgres.yaml
@@ -37,7 +37,7 @@ services:
     expose:
       - "5432"
     volumes:
-      - ./postgres-data:/bitnami/postgresql
+      - ./postgres-data:/var/lib/postgresql/data
     networks:
       - ct
 
