--- a/ova/versions/caddy/Caddyfile
+++ b/ova/versions/caddy/Caddyfile
@@ -1,29 +1,29 @@
 # Caddyfile
 :443 {
     reverse_proxy /api* web:4000
+
     handle /grafana {
         redir /grafana/ 308
     }
-    route /grafana* {
-        uri strip_prefix /grafana
+    handle_path /grafana/* {
         reverse_proxy grafana:3000 {
             header_up X-Forwarded-Prefix /grafana
             header_up X-Forwarded-Proto {http.request.scheme}
         }
     }
+
     handle /prometheus {
         redir /prometheus/ 308
     }
-    route /prometheus* {
-        uri strip_prefix /prometheus
+    handle_path /prometheus/* {
         reverse_proxy prometheus:9090 {
             header_up X-Forwarded-Prefix /prometheus
             header_up X-Forwarded-Proto {http.request.scheme}
         }
     }
+
     reverse_proxy /* vue-web:80
 
-    # Add cache control headers
     header /* Cache-Control "no-cache, no-store, must-revalidate, max-age=0"
     header /assets/* Cache-Control "public, max-age=31536000, immutable"
 
