--- a/Caddyfile
+++ b/Caddyfile
@@ -2,30 +2,38 @@
 :443 {
     reverse_proxy /api* web:4000
 
-    handle /grafana {
-        redir /grafana/ 308
-    }
-    handle_path /grafana/* {
+    # Grafana - pass requests with /grafana prefix intact
+    @grafana path /grafana /grafana/*
+    handle @grafana {
         reverse_proxy grafana:3000 {
             header_up X-Forwarded-Prefix /grafana
-            header_up X-Forwarded-Proto {http.request.scheme}
+            header_up X-Forwarded-Host {http.request.host}
         }
     }
 
-    handle /prometheus {
-        redir /prometheus/ 308
-    }
-    handle_path /prometheus/* {
+    # Prometheus - pass requests with /prometheus prefix intact
+    handle /prometheus* {
         reverse_proxy prometheus:9090 {
-            header_up X-Forwarded-Prefix /prometheus
-            header_up X-Forwarded-Proto {http.request.scheme}
+            header_up X-Forwarded-Host {http.request.host}
         }
     }
 
     reverse_proxy /* vue-web:80
 
-    header /* Cache-Control "no-cache, no-store, must-revalidate, max-age=0"
-    header /assets/* Cache-Control "public, max-age=31536000, immutable"
+    # Cache headers - order matters! More specific rules FIRST
+    header /assets/* {
+        Cache-Control "public, max-age=31536000, immutable"
+        # Remove ETags for immutable assets - they're versioned in the filename
+        -ETag
+    }
 
-    tls /certs/appliance.crt /certs/appliance_key.pem
+    header /* {
+        Cache-Control "no-cache, no-store, must-revalidate, max-age=0"
+        # Remove ETags to prevent 304 responses with stale content
+        -ETag
+        # Add Pragma for HTTP/1.0 compatibility
+        Pragma "no-cache"
+    }
+
+    tls /certs/appliance.crt /certs/appliance_key.pem  # Default certificate and key files
 }
