--- a/ova/Caddyfile
+++ b/ova/Caddyfile
@@ -1,15 +1,39 @@
 # Caddyfile
-{
-    default_sni demo.calltelemetry.internal  # Replace with your default domain
-}
-
 :443 {
     reverse_proxy /api* web:4000
+
+    # Grafana - pass requests with /grafana prefix intact
+    @grafana path /grafana /grafana/*
+    handle @grafana {
+        reverse_proxy grafana:3000 {
+            header_up X-Forwarded-Prefix /grafana
+            header_up X-Forwarded-Host {http.request.host}
+        }
+    }
+
+    # Prometheus - pass requests with /prometheus prefix intact
+    handle /prometheus* {
+        reverse_proxy prometheus:9090 {
+            header_up X-Forwarded-Host {http.request.host}
+        }
+    }
+
     reverse_proxy /* vue-web:80
 
-    # Add cache control headers
-    header /* Cache-Control "no-cache, no-store, must-revalidate, max-age=0"
-    header /assets/* Cache-Control "public, max-age=31536000, immutable"
+    # Cache headers - order matters! More specific rules FIRST
+    header /assets/* {
+        Cache-Control "public, max-age=31536000, immutable"
+        # Remove ETags for immutable assets - they're versioned in the filename
+        -ETag
+    }
+
+    header /* {
+        Cache-Control "no-cache, no-store, must-revalidate, max-age=0"
+        # Remove ETags to prevent 304 responses with stale content
+        -ETag
+        # Add Pragma for HTTP/1.0 compatibility
+        Pragma "no-cache"
+    }
 
     tls /certs/appliance.crt /certs/appliance_key.pem  # Default certificate and key files
 }
