--- a/grafana/provisioning/datasources/calltelemetry.yml
+++ b/grafana/provisioning/datasources/calltelemetry.yml
@@ -5,7 +5,7 @@ datasources:
     uid: calltelemetry-prometheus
     type: prometheus
     access: proxy
-    url: http://prometheus:9090
+    url: http://prometheus:9090/prometheus
     isDefault: true
     editable: false
     jsonData:
