--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -8,24 +8,17 @@ scrape_configs:
     static_configs:
       - targets: ['localhost:9090']
 
-  - job_name: cdrcisco-web
-    metrics_path: /metrics
-    static_configs:
-      - targets: ['web:4080']
-    metric_relabel_configs:
-      - source_labels: [__name__]
-        regex: 'curri_.*'
-        action: keep
-
-  - job_name: cdrcisco-api
-    metrics_path: /metrics
-    static_configs:
-      - targets: ['web:4000']
-
-  # Enable additional scrape targets by appending to static_configs or defining
-  # new jobs. For example, uncomment the following block once the web service
-  # exposes metrics at /metrics:
-  # - job_name: web
+  # Uncomment these jobs when the web service exposes a /metrics endpoint:
+  # - job_name: cdrcisco-web
   #   metrics_path: /metrics
   #   static_configs:
   #     - targets: ['web:4080']
+  #   metric_relabel_configs:
+  #     - source_labels: [__name__]
+  #       regex: 'curri_.*'
+  #       action: keep
+
+  # - job_name: cdrcisco-api
+  #   metrics_path: /metrics
+  #   static_configs:
+  #     - targets: ['web:4000']
