--- a/ova/versions/0.8.4-rc188-no-auto-policy.yaml
+++ b/ova/versions/0.8.4-rc188-no-auto-policy.yaml
@@ -12,7 +12,7 @@ services:
       - ct
 
   vue-web:
-    image: "calltelemetry/vue:0.8.4-rc188-no-auto-policy"
+    image: "calltelemetry/vue:0.8.4-rc188-no-auto-policy2"
     restart: "always"
     expose:
       - "80"
@@ -43,7 +43,7 @@ services:
       - ct
 
   web:
-    image: "calltelemetry/web:0.8.4-rc188"
+    image: "calltelemetry/web:0.8.4-rc188-no-auto-policy2"
     restart: "always"
     user: root
     expose:
