chore(compose): mount /data for org media
Persist org-scoped media (JTAPI audio, recordings) by mounting ./org-data into /data in the web container.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -102,6 +102,8 @@ services:
     volumes:
       - ./certs:/home/app/cert:rw
       - ./crash-dumps:/tmp/crash-dumps:rw
+      # Persistent org-scoped media storage (JTAPI audio, recordings, etc)
+      - ./org-data:/data:rw
     logging:
       driver: "json-file"
       options:
