feat: default PostgreSQL 17 + version guard for legacy upgrades
- docker-compose.yml: Default to calltelemetry/postgres:17 with
  shm_size=256mb, healthcheck, and command-based max_connections
- ova/postgres-14.yaml: Enhanced with POSTGRESQL_MAX_CONNECTIONS for
  Bitnami compat when auto-pinned for legacy customers
- ova/postgres-17.yaml: Enhanced with shm_size, command, healthcheck
- cli.sh update(): Version guard auto-pins PG 14 customers before
  swapping docker-compose.yml to prevent data format incompatibility
- cli.sh postgres upgrade: Compressed dump/restore (gzip) reduces
  peak storage from ~2x to ~1.2x, disk space pre-flight check,
  auto-removes override after upgrading to PG 17

--- a/ova/postgres-14.yaml
+++ b/ova/postgres-14.yaml
@@ -2,4 +2,6 @@ version: "3.8"
 
 services:
   db:
-    image: "calltelemetry/postgres:14"
+    image: "bitnamilegacy/postgresql:14"
+    environment:
+      - POSTGRESQL_MAX_CONNECTIONS=300
