--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,20 +50,29 @@ services:
       start_period: 30s
 
   db:
-    image: "bitnamilegacy/postgresql:14"
+    image: "calltelemetry/postgres:17"
     user: root
     restart: "always"
+    shm_size: "256mb"
     environment:
       - POSTGRES_USER=calltelemetry
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_DB=calltelemetry_prod
-      - POSTGRESQL_MAX_CONNECTIONS=300
+    command: >
+      postgres
+      -c max_connections=300
     expose:
       - "5432"
     volumes:
       - ./postgres-data:/bitnami/postgresql
     networks:
       - ct
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U calltelemetry -d calltelemetry_prod"]
+      interval: 30s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
 
   web:
     image: "calltelemetry/web:0.8.6-rc1"
