--- a/ova/postgres-17.yaml
+++ b/ova/postgres-17.yaml
@@ -3,3 +3,13 @@ version: "3.8"
 services:
   db:
     image: "calltelemetry/postgres:17"
+    shm_size: "256mb"
+    command: >
+      postgres
+      -c max_connections=300
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U calltelemetry -d calltelemetry_prod"]
+      interval: 30s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
