revert: keep PG 14 default for 0.8.6 release line
PG 17 default will be a breaking change in 0.8.7. The version guard
and compressed upgrade tooling in cli.sh ship now so customers have
the upgrade path ready when 0.8.7 lands.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,17 +50,14 @@ services:
       start_period: 30s
 
   db:
-    image: "calltelemetry/postgres:17"
+    image: "bitnamilegacy/postgresql:14"
     user: root
     restart: "always"
-    shm_size: "256mb"
     environment:
       - POSTGRES_USER=calltelemetry
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_DB=calltelemetry_prod
-    command: >
-      postgres
-      -c max_connections=300
+      - POSTGRESQL_MAX_CONNECTIONS=300
     expose:
       - "5432"
     volumes:
