chore: increase PostgreSQL shm_size from 256mb to 8gb
Allows shared_buffers to scale with RAM via tune-memory.sh auto-tuning.
tmpfs is demand-paged so 8gb reservation doesn't consume actual RAM.

--- a/ova/postgres-17.yaml
+++ b/ova/postgres-17.yaml
@@ -3,7 +3,7 @@ version: "3.8"
 services:
   db:
     image: "calltelemetry/postgres:17"
-    shm_size: "256mb"
+    shm_size: "8gb"
     command: >
       postgres
       -c max_connections=300
