feat: default PG 17 for new installations
Change base docker-compose.yml from bitnamilegacy/postgresql:14 to
calltelemetry/postgres:17 with performance tuning (shm_size, command-
line max_connections). Existing PG 14 customers are auto-pinned via
the version guard in update() (already implemented).

The calltelemetry/postgres:17 image has TCP keepalives, shared_buffers,
WAL tuning, and pg_ivm baked in.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,14 +50,17 @@ services:
       start_period: 30s
 
   db:
-    image: "bitnamilegacy/postgresql:14"
+    image: "calltelemetry/postgres:17"
     user: root
     restart: "always"
+    shm_size: "8gb"
     environment:
       - POSTGRES_USER=calltelemetry
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_DB=calltelemetry_prod
-      - POSTGRESQL_MAX_CONNECTIONS=300
+    command: >
+      postgres
+      -c max_connections=300
     expose:
       - "5432"
     volumes:
