fix: rc42 OVA - fix postgres volume mount for bitnami data compatibility
The rc41 change to calltelemetry/postgres:14 broke existing installations because:
1. Volume was mounted at /var/lib/postgresql/data but bitnami stores data
   in a data/ subdirectory within the mount point
2. Removed user: root which prevented postgres from fixing permissions

Fix: mount at /var/lib/postgresql so PGDATA (/var/lib/postgresql/data)
maps to ./postgres-data/data/ on host, matching bitnami's layout.

Also updates postgres-14.yaml override to use calltelemetry/postgres:14
instead of bitnamilegacy/postgresql:14.

--- a/ova/postgres-14.yaml
+++ b/ova/postgres-14.yaml
@@ -2,6 +2,9 @@ version: "3.8"
 
 services:
   db:
-    image: "bitnamilegacy/postgresql:14"
+    image: "calltelemetry/postgres:14"
+    user: root
     environment:
       - POSTGRESQL_MAX_CONNECTIONS=300
+    volumes:
+      - ./postgres-data:/var/lib/postgresql
