fix: rc42 OVA - use bitnami volume path with PGDATA override
Keep the exact same volume mount as bitnami (./postgres-data:/bitnami/postgresql)
and set PGDATA=/bitnami/postgresql/data so the standard postgres image finds
existing data at the bitnami path. This preserves all internal postgresql.conf
path references.

--- a/ova/postgres-14.yaml
+++ b/ova/postgres-14.yaml
@@ -6,5 +6,6 @@ services:
     user: root
     environment:
       - POSTGRESQL_MAX_CONNECTIONS=300
+      - PGDATA=/bitnami/postgresql/data
     volumes:
-      - ./postgres-data:/var/lib/postgresql
+      - ./postgres-data:/bitnami/postgresql
