fix: add PGDATA env var for Bitnami compatibility
Ensures calltelemetry/postgres:17 uses correct data path for existing volumes.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,6 +58,7 @@ services:
       - POSTGRES_USER=calltelemetry
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_DB=calltelemetry_prod
+      - PGDATA=/bitnami/postgresql/data
     command: >
       postgres
       -c max_connections=300
