fix: update OVA version files to use calltelemetry/postgres
Fix OVA override files to use custom postgres image with PGDATA:
- 0.8.4-rc146-postgres.yaml: fix mount path, add PGDATA
- 0.8.6-rc40.yaml: switch from bitnamilegacy, add PGDATA
- 0.8.6-rc41.yaml: fix mount path, add PGDATA
- 0.8.7-rc1.yaml: switch from bitnamilegacy, add PGDATA
- 0.8.7-rc3.yaml: switch from bitnamilegacy, add PGDATA

--- a/ova/versions/0.8.6-rc40.yaml
+++ b/ova/versions/0.8.6-rc40.yaml
@@ -28,13 +28,14 @@ services:
       - ct
 
   db:
-    image: "bitnamilegacy/postgresql:14"
+    image: "calltelemetry/postgres:14"
     user: root
     restart: "always"
     environment:
       - POSTGRES_USER=calltelemetry
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_DB=calltelemetry_prod
+      - PGDATA=/bitnami/postgresql/data
     expose:
       - "5432"
     volumes:
