--- a/ova/versions/0.8.6-rc41.yaml
+++ b/ova/versions/0.8.6-rc41.yaml
@@ -29,15 +29,17 @@ services:
 
   db:
     image: "calltelemetry/postgres:14"
+    user: root
     restart: "always"
     environment:
       - POSTGRES_USER=calltelemetry
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_DB=calltelemetry_prod
+      - PGDATA=/bitnami/postgresql/data
     expose:
       - "5432"
     volumes:
-      - ./postgres-data:/var/lib/postgresql/data
+      - ./postgres-data:/bitnami/postgresql
     networks:
       - ct
 
