fix: add PGDATA and volume mount to postgres override files
Update postgres version override files with missing config:
- postgres-15.yaml: add user, PGDATA, volume mount
- postgres-16.yaml: add user, PGDATA, volume mount
- postgres-17.yaml: add user, PGDATA, volume mount
- postgres-18.yaml: add user, PGDATA, volume mount

All overrides now consistent with postgres-14.yaml baseline.

--- a/ova/postgres-17.yaml
+++ b/ova/postgres-17.yaml
@@ -3,10 +3,16 @@ version: "3.8"
 services:
   db:
     image: "calltelemetry/postgres:17"
+    user: root
     shm_size: "8gb"
+    environment:
+      - POSTGRESQL_MAX_CONNECTIONS=300
+      - PGDATA=/bitnami/postgresql/data
     command: >
       postgres
       -c max_connections=300
+    volumes:
+      - ./postgres-data:/bitnami/postgresql
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U calltelemetry -d calltelemetry_prod"]
       interval: 30s
