--- a/ova/postgres-16.yaml
+++ b/ova/postgres-16.yaml
@@ -3,3 +3,9 @@ version: "3.8"
 services:
   db:
     image: "calltelemetry/postgres:16"
+    user: root
+    environment:
+      - POSTGRESQL_MAX_CONNECTIONS=300
+      - PGDATA=/bitnami/postgresql/data
+    volumes:
+      - ./postgres-data:/bitnami/postgresql
