feat: add JTAPI overlay support to OVA CLI and release pipeline
Add first-class JTAPI toggle for Docker Compose OVA appliances:
- cli.sh: jtapi enable/disable/status commands with systemd management
- docker-compose-jtapi.yml: complete overlay with sidecar, ct-media, MinIO
- docker-compose.yml: add nats-data persistent volume (JetStream fix)
- bundle-manifest.yml + package-release.yml: include overlay in bundles
- All compose operations now use get_compose_files() for overlay awareness

--- a/.github/workflows/package-release.yml
+++ b/.github/workflows/package-release.yml
@@ -126,6 +126,22 @@ jobs:
             fi
           done
 
+      - name: Copy JTAPI overlay
+        run: |
+          VERSION="${{ steps.version.outputs.version }}"
+          BUNDLE_DIR="${BUNDLE_NAME}-${VERSION}"
+          MANIFEST="ova/bundle-manifest.yml"
+
+          echo "--- JTAPI ---"
+          for file in $(yq '.jtapi[]' "$MANIFEST" 2>/dev/null); do
+            if [ -f "$file" ]; then
+              cp "$file" "$BUNDLE_DIR/"
+              echo "✅ $(basename $file)"
+            else
+              echo "⚠️  Missing: $file (JTAPI overlay not found at repo root)"
+            fi
+          done
+
       - name: Verify version-specific compose exists
         run: |
           VERSION="${{ steps.version.outputs.version }}"
