--- a/ova/bundle-manifest.yml
+++ b/ova/bundle-manifest.yml
@@ -30,5 +30,9 @@ grafana:
     - versions/grafana/provisioning/datasources/calltelemetry.yml
     - versions/grafana/provisioning/dashboards/calltelemetry.yaml
 
+# JTAPI overlay (optional feature, lives at repo root not ova/)
+jtapi:
+  - docker-compose-jtapi.yml
+
 # Docker compose is handled separately (version-specific)
 # The workflow will use: ova/versions/{version}.yml or root docker-compose.yml
