--- a/docker-compose-jtapi.yml
+++ b/docker-compose-jtapi.yml
@@ -4,15 +4,20 @@
 #   docker compose -f docker-compose.yml -f docker-compose-jtapi.yml up -d
 #
 # Prerequisites:
-#   Set CUCM credentials in .env or shell environment:
-#     CUCM_HOST=10.0.0.1
-#     CUCM_JTAPI_USER=jtapi-app-user
-#     CUCM_JTAPI_PASSWORD=secret
+#   JTAPI JAR uploaded via UI (Settings > JTAPI)
+#   CUCM credentials configured via UI (Settings > JTAPI > Servers)
 #
-# This overlay:
-#   1. Adds JTAPI_MODE=direct to the web service so the API talks
-#      directly to the sidecar's gRPC endpoint (no K8s operator).
-#   2. Adds the jtapi-sidecar service (Java/Spring, standalone profile).
+# Bootstrapping sequence:
+#   1. sudo ./cli.sh jtapi enable && sudo ./cli.sh restart
+#   2. Sidecar starts, NATS ObjectStore is empty — sidecar waits for JAR
+#   3. Log into CallTelemetry UI > Settings > JTAPI > Upload jtapi.jar
+#   4. Web service uploads JAR to NATS ObjectStore — sidecar auto-restarts (WATCH_JARS=true)
+#   5. Add CUCM server via UI — credentials written to NATS KV — CtiConfigWatcher auto-connects
+#
+# MinIO credentials:
+#   Default: minioadmin/minioadmin. For production, set MINIO_ROOT_USER and
+#   MINIO_ROOT_PASSWORD in your environment or .env file BEFORE first start.
+#   Changing credentials after data exists requires MinIO reconfiguration.
 
 version: "3.8"
 
@@ -22,25 +27,57 @@ services:
       # JTAPI direct mode — API talks to sidecar gRPC without K8s operator
       - JTAPI_MODE=direct
       - JTAPI_SIDECAR_ENDPOINT=jtapi-sidecar:50051
+      - JTAPI_SIDECAR_URL=http://jtapi-sidecar:8080
+      # NATS for KV credential distribution + ObjectStore JAR storage
+      - NATS_URL=nats://nats:4222
+      # MinIO S3 for audio storage (greetings, recordings)
+      - S3_ENABLED=true
+      - S3_ENDPOINT=http://minio:9000
+      - S3_ACCESS_KEY_ID=${MINIO_ROOT_USER:-minioadmin}
+      - S3_SECRET_ACCESS_KEY=${MINIO_ROOT_PASSWORD:-minioadmin}
+      - S3_REGION=us-east-1
+      # ct-media gRPC for audio transcoding (G.711 encoding for JTAPI greetings)
+      - CT_MEDIA_ENDPOINT=ct-media:50053
+    # NOTE: Do NOT add volumes for /data here — the base compose already
+    # bind-mounts ./org-data:/data:rw. Overlay volumes would conflict.
+    depends_on:
+      jtapi-sidecar:
+        condition: service_started
+      minio:
+        condition: service_healthy
 
   jtapi-sidecar:
     image: "calltelemetry/jtapi-sidecar:${JTAPI_VERSION:-latest}"
     restart: unless-stopped
+    mem_limit: 1g
     expose:
       - "50051"
       - "8080"
-    volumes:
-      - jtapi-jars:/app/jars
     environment:
-      - NATS_URL=nats://nats:4222
-      - POD_NAME=jtapi-sidecar-1
       - SPRING_PROFILES_ACTIVE=standalone
+      - NATS_URL=nats://nats:4222
+      - NATS_ORG_ID=1
+      - POD_NAME=jtapi-sidecar-1
       - GRPC_PORT=50051
       - JTAPI_PORT=8080
-      - CUCM_HOST=${CUCM_HOST:-}
-      - CUCM_CTI_PORT=${CUCM_CTI_PORT:-2748}
-      - CUCM_JTAPI_USER=${CUCM_JTAPI_USER:-}
-      - CUCM_JTAPI_PASSWORD=${CUCM_JTAPI_PASSWORD:-}
+      # Auto-connect/configure via NATS KV (CtiConfigWatcher)
+      - CTI_POOL_AUTO_CONNECT=true
+      - CTI_POOL_AUTO_CONFIGURE=true
+      - CTI_POOL_SOURCE=nats
+      - CTI_POOL_ENABLE_MEDIA=true
+      # MinIO for audio storage
+      - MINIO_ENABLED=true
+      - MINIO_ENDPOINT=http://minio:9000
+      - MINIO_ACCESS_KEY=${MINIO_ROOT_USER:-minioadmin}
+      - MINIO_SECRET_KEY=${MINIO_ROOT_PASSWORD:-minioadmin}
+      # JAR auto-restart when downloaded from NATS ObjectStore
+      - WATCH_JARS=true
+      # OpenTelemetry (disabled by default — uncomment if OTel collector is available)
+      # - OTEL_ENABLED=true
+      # - OTEL_EXPORTER_OTLP_ENDPOINT=http://otel-collector:4318/v1/traces
+      # - OTEL_TRACING_SAMPLING_PROBABILITY=1.0
+    volumes:
+      - jtapi-jars:/app/jars
     depends_on:
       nats:
         condition: service_started
@@ -51,8 +88,47 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
-      start_period: 60s
+      start_period: 90s
+
+  ct-media:
+    image: "calltelemetry/ct-media:${CT_MEDIA_VERSION:-latest}"
+    restart: unless-stopped
+    expose:
+      - "50053"
+    environment:
+      - GRPC_PORT=50053
+      - MINIO_ENDPOINT=minio:9000
+      - MINIO_ACCESS_KEY=${MINIO_ROOT_USER:-minioadmin}
+      - MINIO_SECRET_KEY=${MINIO_ROOT_PASSWORD:-minioadmin}
+    networks:
+      - ct
+    depends_on:
+      minio:
+        condition: service_healthy
+
+  minio:
+    image: minio/minio:RELEASE.2024-11-07T00-52-20Z
+    command: server /data --console-address ":9001"
+    restart: unless-stopped
+    environment:
+      - MINIO_ROOT_USER=${MINIO_ROOT_USER:-minioadmin}
+      - MINIO_ROOT_PASSWORD=${MINIO_ROOT_PASSWORD:-minioadmin}
+    expose:
+      - "9000"
+      - "9001"
+    volumes:
+      - minio-data:/data
+    networks:
+      - ct
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:9000/minio/health/live || exit 1"]
+      interval: 30s
+      timeout: 5s
+      retries: 3
+      start_period: 15s
 
 volumes:
   jtapi-jars:
+    driver: local
+  minio-data:
     driver: local
