feat: OVA release 0.8.6-rc47-jtapi
- Version YAML with pinned web/vue/traceroute images
- JTAPI overlay defaults pinned to jtapi-sidecar:1.14.0 and ct-media:0.2.4
- Fix create-ova-release sed patterns to handle versioned defaults

--- a/.github/workflows/create-ova-release.yml
+++ b/.github/workflows/create-ova-release.yml
@@ -186,12 +186,12 @@ jobs:
           fi
 
           if [ -n "$JTAPI_VERSION" ]; then
-            sed -i 's|jtapi-sidecar:\${JTAPI_VERSION:-latest}|jtapi-sidecar:'"$JTAPI_VERSION"'|' "$OVERLAY"
+            sed -i 's|jtapi-sidecar:\${JTAPI_VERSION:-[^}]*}|jtapi-sidecar:'"$JTAPI_VERSION"'|' "$OVERLAY"
             echo "✅ Pinned jtapi-sidecar to $JTAPI_VERSION"
           fi
 
           if [ -n "$CT_MEDIA_VERSION" ]; then
-            sed -i 's|ct-media:\${CT_MEDIA_VERSION:-latest}|ct-media:'"$CT_MEDIA_VERSION"'|' "$OVERLAY"
+            sed -i 's|ct-media:\${CT_MEDIA_VERSION:-[^}]*}|ct-media:'"$CT_MEDIA_VERSION"'|' "$OVERLAY"
             echo "✅ Pinned ct-media to $CT_MEDIA_VERSION"
           fi
 
